--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h3>Things to Buy</h3>
+<ol>
+  <li data-ns-test="shoppingList">New Laptop</li>
+  <li data-ns-test="shoppingList">Camera</li>
+  <li data-ns-test="shoppingList">Gaming Console</li>
+</ol>
+
+<!-- Unordered List for Holiday Destinations -->
+<h3>Dream Holiday Destinations</h3>
+<ul>
+  <li data-ns-test="holidayList">Bora Bora</li>
+  <li data-ns-test="holidayList">Santorini</li>
+  <li data-ns-test="holidayList">Kyoto</li>
+</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
